@@ -1,16 +1,20 @@
 Function: nfisincl
 Section: number_fields
-C-Name: nfisincl
-Prototype: GG
-Help: nfisincl(f,g): let f and g define number fields, either irreducible
- rational polynomials or number fields as output by nfinit; tests whether the
- number field f is isomorphic to a subfield of g. Return 0 if not, and
- otherwise all the isomorphisms.
+C-Name: nfisincl0
+Prototype: GGD0,L,
+Description:
+ (gen, gen, ?0):gen    nfisincl($1, $2)
+ (gen, gen, small):gen nfisincl0($1, $2, $3)
+Help: nfisincl(f,g,{flag=0}): let f and g define number fields, either
+ irreducible rational polynomials or number fields as output by nfinit; tests
+ whether the number field f is isomorphic to a subfield of g. Return 0 if not,
+ and otherwise all the isomorphisms (flag=0, default) or only one (flag=1).
 Doc: let $f$ and $g$ define number fields, where $f$ and $g$ are irreducible
  polynomials in $\Q[X]$ and \var{nf} structures as output by \kbd{nfinit}.
  Tests whether the number field $f$ is conjugate to a subfield of the field
  $g$. If they are not, the output is the integer 0. If they are, the output is
- a vector of polynomials, each polynomial $a$ representing an embedding
+ a vector of polynomials ($\fl=0$, default) or a single polynomial $\fl=1$,
+ each polynomial $a$ representing an embedding
  i.e.~being such that $g\mid f\circ a$. If either $f$ or $g$ is not
  irreducible, the result is undefined.
 
@@ -55,3 +59,5 @@ Doc: let $f$ and $g$ define number fields, where $f$ and $g$ are irreducible
  ? for (i=1, B, nfinit(U))
  time = 308 ms.
  @eprog
+Variant: Also available is
+ \fun{GEN}{nfisisom}{GEN a, GEN b} ($\fl = 0$).
