@@ -345,6 +345,10 @@ x^16 + 1180785226777964111519743237847228/2099046671299559859076390314304898
 x^2 + 1
 [-1/81*x^4, 1/162*x^4 - 1/2*x, 1/162*x^4 + 1/2*x]
 [-1/2187*x^4, 1/4374*x^4 - 1/2*x, 1/4374*x^4 + 1/2*x]
+-1/81*x^4
+-1/2187*x^4
+[x]
+x
 [25339, [165, 0, 0, 4]~]
 Mod(1/2*x - 1/2, x^2 + 23)
 [1, 2]~
@@ -402,4 +406,4 @@ Mod(-6/5, x)
   ***   at top-level: nfalgtobasis(nf,['a,'a]~)
   ***                 ^-------------------------
   *** nfalgtobasis: incorrect type in nfalgtobasis (t_COL).
-Total time spent: 799
+Total time spent: 624
