@@ -212,7 +212,7 @@ matrixqz(Mat(0))
 vecextract([1],[-1]);
 vecextract([1],[2]);
 idealfrobenius(K,galoisinit(K),idealprimedec(K,2)[1])
-nfisincl(x^2,x^2)
+nfisincl(x^2,x^2+1)
 polcompositum(x^2,x)
 rnfdedekind(K, x^2+x-1/3)
 hilbert(Mod(1,2),1)
