@@ -76,6 +76,10 @@ K = nfinit(x^2 + 1); nfisisom(K, y^2 + 1); K.pol
 \\#2144
 nfisincl(x^3+9,x^6+2187)
 nfisincl(x^3+9*27,x^6+2187*3^6)
+nfisincl(x^3+9,x^6+2187,1)
+nfisincl(x^3+9*27,x^6+2187*3^6,1)
+nfisincl(x^3+9,x^3+9)
+nfisincl(x^3+9,x^3+9,1)
 
 p=10^62+447;
 q=10^42+63;
